--- a/.github/workflows/alpine-builder.yml
+++ b/.github/workflows/alpine-builder.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
     paths:
-      - "alpine/build.sh"
       - "alpine/Dockerfile"
+      - ".github/workflows/alpine-builder.yml"
   workflow_dispatch:
 jobs:
   buildx:
