--- a/.github/workflows/frps-builder.yml
+++ b/.github/workflows/frps-builder.yml
@@ -8,40 +8,16 @@ on:
       - "frps/Dockerfile"
       - ".github/workflows/frps-builder.yml"
   workflow_dispatch:
+
 jobs:
-  buildx:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.7
-        with:
-          token: ${{ secrets.WORKFLOW_SECRET }}
-
-      - # Add support for more platforms with QEMU (optional)
-        # https://github.com/docker/setup-qemu-action
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3.2.0
-
-      - # https://github.com/docker/setup-buildx-action/issues/57#issuecomment-1059657292
-        # https://github.com/docker/buildx/issues/136#issuecomment-550205439
-        # docker buildx create --driver-opt --driver-opt --driver-opt
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.6.1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3.3.0
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v6.7.0
-        with:
-          context: frps
-          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
-          push: true
-          tags: |
-            wangdongbing/frps:latest
-            wangdongbing/frps:0.60.0
-            wangdongbing/frps:0.60
-            wangdongbing/frps:0
+  call-image-builder:
+    name: 调用构建镜像的可复用工作流
+    uses: onedb-image/image-builder/.github/workflows/call-image-builder.yml@master
+    secrets: inherit
+    with:
+      context: frps
+      tags: |
+        wangdongbing/frps:latest
+        wangdongbing/frps:0.60.0
+        wangdongbing/frps:0.60
+        wangdongbing/frps:0
