--- a/.github/workflows/v2ray-builder.yml
+++ b/.github/workflows/v2ray-builder.yml
@@ -53,3 +53,4 @@ jobs:
       tags: |
         wangdongbing/v2ray-core:${{ needs.prepare.outputs.docker_tag }}
         wangdongbing/v2ray-core:latest
+      build-args: TAG=${{ needs.prepare.outputs.docker_tag }}
