--- a/.github/workflows/build-frpc.yml
+++ b/.github/workflows/build-frpc.yml
@@ -1,4 +1,4 @@
-name: frpc-builder
+name: build-frpc
 
 on:
   push:
@@ -6,13 +6,13 @@ on:
       - master
     paths:
       - "frpc/Dockerfile"
-      - ".github/workflows/frpc-builder.yml"
+      - ".github/workflows/build-frpc.yml"
   workflow_dispatch:
 
 jobs:
-  call-image-builder:
-    name: 调用构建镜像的可复用工作流
-    uses: onedb-image/image-builder/.github/workflows/call-image-builder.yml@master
+  build-image:
+    name: Build Image
+    uses: onedongbing/gh-actions/.github/workflows/build-image.yml@master
     secrets: inherit
     with:
       context: frpc
