--- a/.github/workflows/build-alpine.yml
+++ b/.github/workflows/build-alpine.yml
@@ -14,6 +14,7 @@ jobs:
     name: Build Image
     uses: onedongbing/gh-actions/.github/workflows/build-image.yml@master
     secrets:
+      WORKFLOW_SECRET: ${{ secrets.WORKFLOW_SECRET }}
       DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
       DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
     with:
