--- a/.github/workflows/build-frpc.yml
+++ b/.github/workflows/build-frpc.yml
@@ -19,6 +19,7 @@ jobs:
       DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
     with:
       context: frpc
+      push: true
       tags: |
         wangdongbing/frpc:latest
         wangdongbing/frpc:0.60.0
